smithy-model/src/test/resources/software/amazon/smithy/model/loader/invalid/metadata/metadata-multiple-lines.smithy
// Parse error at line 3, column 16 near `//`: Expected a valid identifier character, but found '/' | Model
$version: "2.0"
metadata foo = // this is not allows
"bar"
